sharing types of my god its so beautiful ;

--- a/poefree-client/tsconfig.app.json
+++ b/poefree-client/tsconfig.app.json
@@ -20,7 +20,9 @@
         "noUnusedParameters": true,
         "noImplicitAny": true,
         "strictNullChecks": true,
-        "noFallthroughCasesInSwitch": true
+        "noFallthroughCasesInSwitch": true,
+
+        "paths": { "@backend/*": ["../poefree-server/src/types/*"] }
     },
     "include": ["src"]
 }
