--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "scripts": {
-        "poefree": "docker-compose down && docker-compose up --build"
+        "poefree": "docker-compose down && docker-compose up --build",
+        "git-synch": "git add . && git commit -am 'git synch' && git push"
     }
 }
