--- a/poefree-client/package.json
+++ b/poefree-client/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@poefree/shared-types": "file:../shared",
     "@prisma/client": "^6.2.1",
+    "axios": "^1.7.9",
+    "prettier": "^3.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
