--- a/poefree-server/package.json
+++ b/poefree-server/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@prisma/adapter-pg": "^6.2.1",
     "@prisma/client": "^6.2.1",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.10",
