--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,9 @@ services:
       - "4000:4000"
     depends_on:
       - postgres
+    volumes:
+      - ./poefree-server:/app
+      - /app/node_modules
     command: sh -c "npx prisma migrate deploy && npm run dev"
 
   postgres:
@@ -32,6 +35,12 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
+    volumes:
+      - ./poefree-client:/app
+      - /app/node_modules
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    command: npm run dev
 
 volumes:
   postgres_data:
