--- a/poefree-server/package.json
+++ b/poefree-server/package.json
@@ -15,11 +15,14 @@
   "dependencies": {
     "@prisma/adapter-pg": "^6.2.1",
     "@prisma/client": "^6.2.1",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-validator": "^7.2.1",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
     "prettier": "^3.4.2"
   },
@@ -28,6 +31,8 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/express-validator": "^3.0.2",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.10.10",
     "@types/pg": "^8.11.11",
     "nodemon": "^3.1.9",
